# bathy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: basic_usage.ipynb  profiles.ipynb
src/bathy/: __init__.py  bathymetry.py  profile.py  utils.py
tests/: __init__.py  conftest.py  test_bathymetry.py  test_canyons.py  test_profile.py  test_utils.py
