[project]
name = "bathy"
version = "0.1.0"
description = "Lightweight Python package for exploring bathymetry data."
readme = "README.md"
authors = [
    { name = "eslrgs", email = "euan-soutter@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "xarray>=2024.1.0",
    "netcdf4>=1.6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "geographiclib>=2.0",
    "geopandas>=0.14.0",
    "pydap>=3.5.8",
    "jinja2>=3.1.6",
    "cmocean>=4.0.0",
    "rioxarray>=0.15.0",
    "numba>=0.59.0",
    "xarray-spatial>=0.5.0",
    "polars>=1.0.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
